--- a/Virtual Tourist/Base.lproj/Main.storyboard
+++ b/Virtual Tourist/Base.lproj/Main.storyboard
@@ -138,6 +138,10 @@
                         <viewLayoutGuide key="safeArea" id="o2x-R7-rlf"/>
                     </view>
                     <navigationItem key="navigationItem" id="Y7f-GP-EQL"/>
+                    <connections>
+                        <outlet property="collectionFlow" destination="weu-7J-SFS" id="hdX-FV-g5t"/>
+                        <outlet property="collectionView" destination="kDq-bu-Ips" id="tih-ND-6G0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sVT-Mm-U2x" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
