--- a/Virtual Tourist/Base.lproj/Main.storyboard
+++ b/Virtual Tourist/Base.lproj/Main.storyboard
@@ -149,6 +149,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="Y7f-GP-EQL"/>
                     <connections>
+                        <outlet property="MapView" destination="lwP-Ml-amC" id="x28-re-KHc"/>
                         <outlet property="collectionFlow" destination="weu-7J-SFS" id="hdX-FV-g5t"/>
                         <outlet property="collectionView" destination="kDq-bu-Ips" id="tih-ND-6G0"/>
                     </connections>
