--- a/Virtual Tourist/Base.lproj/Main.storyboard
+++ b/Virtual Tourist/Base.lproj/Main.storyboard
@@ -86,6 +86,13 @@
                                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                 </collectionViewFlowLayout>
+                                                <label key="backgroundView" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This pin has no images." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="v59-wQ-1dG">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="431"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                                 <cells>
                                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imageCell" id="Cfp-uw-750" customClass="CollectionViewCell" customModule="Virtual_Tourist" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="0.0" width="102" height="109"/>
@@ -159,6 +166,7 @@
                         <outlet property="collectionFlow" destination="weu-7J-SFS" id="hdX-FV-g5t"/>
                         <outlet property="collectionView" destination="kDq-bu-Ips" id="tih-ND-6G0"/>
                         <outlet property="newCollectionButton" destination="r8i-I6-nUS" id="HlY-es-pjn"/>
+                        <outlet property="noImagesLabel" destination="v59-wQ-1dG" id="v5e-6b-TaA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sVT-Mm-U2x" userLabel="First Responder" sceneMemberID="firstResponder"/>
