--- a/Virtual Tourist/Base.lproj/Main.storyboard
+++ b/Virtual Tourist/Base.lproj/Main.storyboard
@@ -20,13 +20,26 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ZhM-mD-nQ5">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                             </mapView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap Pins To Delete" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ass-mo-zi7">
+                                <rect key="frame" x="0.0" y="603" width="375" height="64"/>
+                                <color key="backgroundColor" red="0.99069552951388884" green="0.050980392156862744" blue="0.074509803921568626" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="lYf-6D-1ZX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="ZhM-mD-nQ5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="3wf-ix-drD"/>
+                            <constraint firstItem="Ass-mo-zi7" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="4p9-UW-0aK"/>
                             <constraint firstItem="ZhM-mD-nQ5" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Kqv-P6-G94"/>
                             <constraint firstItem="ZhM-mD-nQ5" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="SDX-Id-pVs"/>
+                            <constraint firstItem="Ass-mo-zi7" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="dgM-Rk-WS8"/>
                             <constraint firstItem="ZhM-mD-nQ5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="frn-Sn-fzW"/>
+                            <constraint firstItem="Ass-mo-zi7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xBm-A1-3pk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -39,13 +52,14 @@
                     </navigationItem>
                     <connections>
                         <outlet property="MapView" destination="ZhM-mD-nQ5" id="JSG-Ug-Xkb"/>
+                        <outlet property="deletePinsLabel" destination="Ass-mo-zi7" id="o26-Kk-auZ"/>
                         <outlet property="editButton" destination="TDU-No-FSn" id="jPE-c0-AzY"/>
                         <segue destination="9uX-7j-brY" kind="show" identifier="collectionViewSegue" id="FhB-Uu-E9Q"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1242" y="116"/>
+            <point key="canvasLocation" x="1240.8" y="115.59220389805098"/>
         </scene>
         <!--CollectionViewController-->
         <scene sceneID="PvV-AA-GdT">
